fix: align draw items in the tool box

--- a/client/src/app/components/tool-box/tool-box.component.scss
+++ b/client/src/app/components/tool-box/tool-box.component.scss
@@ -31,7 +31,7 @@ input[type='color']:hover {
 .drawTool {
     display: flex;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
     width: 20vw;
 }
 
